force-app/main/default/objects/PricebookEntry/fields/AreaSqm__c.field-meta.xml
<CustomField>
    <fullName>AreaSqm__c</fullName>
    <formula>Product2.AreaSqm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area (Sq.m.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>