force-app/main/default/objects/PricebookEntry/fields/FQUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>FQUnitPrice__c</fullName>
    <label>FQ Unit Price</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>