force-app/main/default/objects/PricebookEntry/fields/FQUnitPricesqm__c.field-meta.xml
<CustomField>
    <fullName>FQUnitPricesqm__c</fullName>
    <formula>FQUnitPrice__c / AreaSqm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FQ Unit Price/sq.m.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>