force-app/main/default/objects/PricebookEntry/fields/TQUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>TQUnitPrice__c</fullName>
    <label>TQ Unit Price</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>