force-app/main/default/objects/PricebookEntry/fields/TQUnitPricesqm__c.field-meta.xml
<CustomField>
    <fullName>TQUnitPricesqm__c</fullName>
    <formula>TQUnitPrice__c / AreaSqm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TQ Unit Price/sq.m.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>